# rill

./: .eslintrc.json  .gitignore  AUDIT_REPORT.md  CHANGELOG.zh.md  INTEGRATION.md  README.md  README.zh.md  TODO.md  biome.json  bunfig.toml  package-lock.json  package.json  pnpm-lock.yaml  react-native.config.js  rill-workspace-0.1.0.tgz  test-output.txt  test-reconciler-minimal.ts  tsconfig.base.json  tsconfig.json  tsup.config.ts  vitest.config.mts  vitest.config.ts
.github/: CONTRIBUTING.md  CONTRIBUTING.zh.md
.github/workflows/: benchmarks.yml  ci.yml
docs/: API.md  API.md.patch  API.zh.md  ARCHITECTURE.md  ARCHITECTURE.zh.md  GUIDE.md  GUIDE.zh.md  NATIVE_SANDBOX_INTEGRATION.md  NATIVE_SANDBOX_INTEGRATION.zh.md  PRODUCTION_GUIDE.md  PRODUCTION_GUIDE.zh.md  api-rill-let.md
docs/en/: ARCHITECTURE.zh.md  GUIDE.md  PRODUCTION_GUIDE.zh.md
docs/internals/: BRIDGE.md  GUEST_HOST_INTERACTION.md  GUEST_HOST_INTERACTION.zh.md  GUEST_RUNTIME_ARCHITECTURE.md  GUEST_RUNTIME_ARCHITECTURE.zh.md  README.md  SANDBOX_SOLUTIONS_COMPARISON.md  SANDBOX_SOLUTIONS_COMPARISON.zh.md
docs/zh-hans/: API.md  GUIDE.md
examples/: README.md  README.zh.md  verify-examples.ts
examples/advanced-features/: README.md  README.zh.md  package.json
examples/advanced-features/src/: guest.tsx  host-demo.tsx  plugin.tsx
examples/host-integration/: README.md  README.zh.md  package.json
examples/host-integration/src/: HostApp.tsx  QuickJSProvider.tsx  guest.tsx  plugin.tsx
examples/simple-guest/: package.json
examples/simple-guest/src/: index.tsx
examples/simple-plugin/: package.json
native/: RillSandboxNative.podspec  dev.sh
native/core/src/: RillSandboxNativeTurboModule.h  RillSandboxNativeTurboModule.mm
native/hermes/src/: HermesSandboxJSI.h  HermesSandboxJSI.mm
native/jsc/: run-tests.sh
native/jsc/src/: JSCRuntime.h  JSCRuntime.mm  JSCSandboxJSI.h  JSCSandboxJSI.mm  RillSandboxNativeTurboModule.h  RillSandboxNativeTurboModule.mm
native/jsc/test/: sandbox_test.js
native/jsi/: instrumentation.h  jsi.cpp  jsi.h
native/platform/: RillSandboxNative.podspec  jsc
native/platform/android/: CMakeLists.txt
native/quickjs/: CMakeLists.txt  CMakeLists.wasm.cmake  CMakeLists.wasm.txt  Makefile  build-wasm.sh  run-tests.sh
native/quickjs/src/: EmscriptenBindings.cpp  HostProxy.cpp  HostProxy.h  JSIValueConverter.cpp  JSIValueConverter.h  QuickJSInstrumentation.h  QuickJSPointerValue.cpp  QuickJSPointerValue.h  QuickJSRuntime.cpp  QuickJSRuntime.h  QuickJSRuntimeFactory.cpp  QuickJSRuntimeFactory.h  QuickJSSandboxJSI.cpp  QuickJSSandboxJSI.h  RillQuickJSNativeTurboModule.cpp  RillQuickJSNativeTurboModule.h  wasm_bindings.c
native/quickjs/test/: arraybuffer_test.cpp  main.cpp  sandbox_test.js  sandbox_test.native.js
presets/react-native/: package.json  tsconfig.json
presets/react-native/src/: EngineView.tsx  index.ts
presets/react-web/: package.json
presets/react-web/src/: index.ts
scripts/: build-guest-bundle.ts  check-unknown.ts  run-all-tests.sh
src/: style-types.ts  types.test.ts  types.ts
src/__mocks__/: react-native.ts
src/__tests__/integration/: e2e.test.ts
src/bridge/: TypeRules.complex.test.ts  TypeRules.ts  serialization.ts  types.ts
src/cli/: analyze.command.test.ts  babel-plugin-function-source-location.ts  babel-types.d.ts  build.analyze.edges.test.ts  build.analyze.ignore.test.ts  build.analyze.integration.test.ts  build.analyze.moreedges.test.ts  build.analyze.test.ts  build.errors.test.ts  build.strict.guard.test.ts  build.test.ts  build.ts  index.test.ts  index.ts  oxcAdapter.js  oxcAdapter.test.ts  oxcAdapter.ts
src/components/: TouchableOpacity.tsx  View.tsx  index.ts
src/debug/: entry.ts
src/devtools/: bridge.test.ts  bridge.ts  index.test.ts  index.ts  runtime.test.ts  runtime.ts
src/guest/: bundle.ts  console.ts  debug.ts  devtools.ts  entry.ts  globals-setup.ts  guest-bundle.ts  runtime-helpers.ts  runtime.ts  tsconfig.json  types.ts
src/guest-bundle/: entry.ts  init.ts
src/guest-bundle/reconciler/: devtools.test.ts  element-transform.test.ts  element-transform.ts  guest-encoder.ts  host-config.test.ts  host-config.ts  index.ts  reconciler-manager.ts  types.ts
src/guest/let/: index.ts  sdk.ts  types.ts
src/host/: DevOverlay.tsx  Engine.ts  EngineView.test.tsx  IEngine.ts  devtools-source-map.ts  index.check.ts  index.ts  performance.ts  receiver.test.ts  receiver.ts  registry.ts  types.ts  useEngineView.ts
src/let/: ErrorBoundary.test.tsx  index.ts  sdk.errorboundary.test.tsx  sdk.hooks.test.tsx  sdk.ts  types.ts
src/native-specs/: NativeRillSandboxNative.ts
src/reconciler/: index.test.ts  index.ts
src/runtime/: EngineView.test.tsx  EngineView.tsx  IEngine.ts  engine.callfunction.registry.test.ts  engine.defaultprovider.e2e.test.ts  engine.enhanced.test.ts  engine.hostevent.test.ts  engine.test.ts  engine.ts  engine.vm.test.ts  engine.worker.test.ts  index.check.ts  index.ts  performance.merger.advanced.test.ts  performance.test.ts  performance.ts  receiver.attribution.window.test.ts  receiver.render.metrics.test.ts  receiver.render.multiroot.test.ts  receiver.reorder.metrics.test.ts  receiver.test.ts  receiver.ts  registry.test.ts  registry.ts  test-utils.ts  types.ts  useEngineView.ts
src/sandbox/: globals.ts  index.native.ts  index.ts
src/sandbox-native/: JSCModule.ts  index.ts
src/sandbox-runtime/: build.ts  console.ts  debug-entry.ts  debug.ts  devtools.ts  index.ts  runtime-helpers.ts  types.ts
src/sandbox-web/: index.ts
src/scripts/: build-guest.ts
src/sdk/: index.test.ts  index.ts  sdk.react-hooks.test.ts  sdk.ts  types.ts
src/shared/: CallbackRegistry.ts  TypeRules.complex.test.ts  TypeRules.ts  index.ts  serialization.ts  style-types.ts  types.test.ts  types.ts
tests/e2e-sandbox-web/: index.html  playwright.config.ts  run-tests.sh  run.ts  web-worker.e2e.ts
tests/e2e-wasm-sandbox/: index.html  playwright.config.ts  rill-useeffect.e2e.ts  run-tests.sh  run.ts  wasm-sandbox.e2e.ts
tests/rn-macos-e2e/: App.tsx  index.js  metro.config.js  package.json  run-tests.sh  tsconfig.json
(+210 files in other folders)
